--- a/webApp/templates/home.html
+++ b/webApp/templates/home.html
@@ -3,7 +3,7 @@
 <html>
     <head>
       <title>Sistema de análisis financiero</title>
-      <link rel="icon" href="{% static 'favicon.png' %}" type="image/x-icon">
+      <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
       <script src="{% static 'js/main.js' %}"></script>
     </head>
