--- a/webApp/static/css/styles.css
+++ b/webApp/static/css/styles.css
@@ -1,29 +1,136 @@
-.update_title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.dropdown_div {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 5px;
 }
-.update_title:hover {
+
+.dropdown_button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px;
+  border: 1px solid black;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.dropdown_button:hover {
+  background-color: #4caf4fb2;
+  color: black;
+}
+
+.dropdown_button_content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown_button_content button {
+  color: black;
+  padding: 5px;
+  background-color: transparent;
+  display: block;
+  text-align: center;
+  border: 1px solid black;
+  width: 100%;
+}
+
+.dropdown_button_content .visualize_all_tags {
+  color: black;
+  padding: 5px;
+  background-color: lightsalmon;
+  display: inline-block;
+  text-align: center;
+  border: 1px solid black;
+  width: 100%;
+}
+
+.dropdown_button_content button:hover {
+  background-color: lightgrey;
+  cursor: pointer;
+}
+
+.show_buttons {
+  display: block;
+}
+
+.dropdown_button_content .dropdown_button_content_add_new {
+  display: block;
+  background-color: gray;
+  color: white;
+  border: 1px solid black;
+  text-align: center;
+  cursor: pointer;
+}
+
+.dropdown_button_content .button_category_container {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.dropdown_button_content .button_category_container_add_new {
+  display: block;
+}
+
+.dropdown_button_content .dropdown_button_content_add_new:hover {
+  background-color: lightgrey;
+  color: black;
+  cursor: pointer;
+}
+
+.update_button {
+  padding: 10px;
+  margin-bottom: 3px;
+  margin-right: 5px;
+  border-radius: 4px;
+  background-color: gray;
+  color: white;
+  border: 1px solid black;
+}
+
+.update_button:hover {
+  background-color: lightgray;
   color: rgb(88, 86, 86);
   cursor: pointer;
 }
+
 .tags_checkboxes:hover {
   color: rgb(88, 86, 86);
   cursor: pointer;
 }
+
+.categories_checkboxes:hover {
+  color: rgb(88, 86, 86);
+  cursor: pointer;
+}
+
+.categories_checkboxes_li {
+  margin-bottom: 5px;
+}
+
+.categories_checkboxes_ul {
+  list-style: none;
+  padding-left: 10px;
+}
+
 .button_select_all_tags {
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid black;
   cursor: pointer;
 }
+
 .button_select_all_tags:hover {
   background-color: rgb(88, 86, 86);
   color: white;
   cursor: pointer;
 }
+
 .table_tags {
   border-collapse: collapse;
 }
+
 .th_td_tags {
   border: 1px solid black;
   padding: 8px;
@@ -33,9 +140,11 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .button_table {
   margin-top: 10px;
 }
+
 .button_classify_filters {
   margin: 1px;
   width: 20px;
@@ -46,6 +155,7 @@
   border: 1px solid #000;
   border-radius: 5px;
 }
+
 .button_classify_filters:hover {
   background-color: white;
   color: black;
