--- a/webApp/templates/create_tag.html
+++ b/webApp/templates/create_tag.html
@@ -9,7 +9,7 @@
 
 <script>
     {% if comprobation_create_tag %}
-        alert('Debes verificar que este tag no se haya añadido anteriormente ó que el formato sea correcto.');
+        alert('You must verify that this tag has not been added previously or that the format is correct.');
     {% endif %}
 </script>
 {% endblock %}
