Translate to english

--- a/webApp/templates/home.html
+++ b/webApp/templates/home.html
@@ -192,7 +192,7 @@
       Create new tag/s
     </button>
     {% endif %}
-    {% if current_category == 'visualize_all_tags' and list_categories > 1 %}
+    {% if current_category == 'visualize_all_tags' and len_categories > 0 %}
       <button onclick="add_tag_to_category_url()" class="button_table">
         Add tag/s to a category
       </button>
