--- a/webApp/templates/select_category.html
+++ b/webApp/templates/select_category.html
@@ -14,8 +14,8 @@
     {% endfor %}
 </ul>
 {% if mode == "add" %}
-    <button onclick="add_tag_to_category()">Enviar</button>
+    <button onclick="add_tag_to_category()">Submit</button>
 {% else %}
-    <button onclick="transfer_tag_between_categories()">Enviar</button>
+    <button onclick="transfer_tag_between_categories()">Submit</button>
 {% endif %}
 {% endblock %}
