--- a/webApp/static/css/styles.css
+++ b/webApp/static/css/styles.css
@@ -22,18 +22,19 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 25px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
 .dropdown_button_content button {
   color: black;
-  padding: 5px;
   background-color: transparent;
   display: block;
   text-align: center;
   border: 1px solid black;
+  padding: 5px 30px;
+  white-space: normal;
   width: 100%;
 }
 
