--- a/webApp/templates/create_tag.html
+++ b/webApp/templates/create_tag.html
@@ -4,7 +4,7 @@
 <form method="post">
     {% csrf_token %}
     {{form}}
-    <button type="submit">Enviar</button>
+    <button type="submit">Submit</button>
 </form>
 
 <script>
